# api/dashboard-main/openapi.yaml
@@ -50,45 +50,14 @@ paths:
   /compare:
     get:
       parameters:
-        - in: query
-          name: service
-          required: true
-          schema:
-            type: string
-        - in: query
-          name: source_id
-          required: true
-          schema:
-            type: integer
-            format: "int64"
-        - in: query
-          name: release_one_title
-          required: true
-          schema:
-            type: string
-        - in: query
-          name: release_one_start
-          required: true
-          schema:
-            type: integer
-            format: "int64"
-        - in: query
-          name: release_two_title
-          required: true
-          schema:
-            type: string
-        - in: query
-          name: release_two_start
-          required: true
-          schema:
-            type: integer
-            format: "int64"
-        - in: query
-          name: period
-          required: true
-          schema:
-            type: string
-            enum: [ 15m, 1h, 6h, 1d ]
+        - { in: query, name: service,               required: true, schema: { type: string } }
+        - { in: query, name: release_one_title,     required: true, schema: { type: string } }
+        - { in: query, name: release_one_start,     required: true, schema: { type: integer, format: int64 } }
+        - { in: query, name: release_one_source_id, required: true, schema: { type: integer, format: int64 } }
+        - { in: query, name: release_two_title,     required: true, schema: { type: string } }
+        - { in: query, name: release_two_start,     required: true, schema: { type: integer, format: int64 } }
+        - { in: query, name: release_two_source_id, required: true, schema: { type: integer, format: int64 } }
+        - { in: query, name: period,                required: true, schema: { type: string, enum: [ 15m, 1h, 6h, 1d ] } }
       responses:
         200:
           description: return measurement pairs for two releases
